--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,14 @@ psycopg2-binary==2.9.9
 PyJWT==2.8.0
 pytz==2024.1
 sqlparse==0.4.4
+
+pip~=23.2.1
+wheel~=0.41.2
+uuid~=1.30
+PyYAML~=6.0.1
+requests~=2.31.0
+packaging~=24.0
+inflection~=0.5.1
+uritemplate~=4.1.1
+setuptools~=68.2.2
+stripe~=8.6.0
