--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
 asgiref==3.7.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
 coverage==7.4.3
 Django==5.0.2
 django-filter==23.5
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.7
+idna==3.6
+inflection==0.5.1
+packaging==24.0
 pillow==10.2.0
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
 pytz==2024.1
+PyYAML==6.0.1
+requests==2.31.0
 sqlparse==0.4.4
-
-pip~=23.2.1
-wheel~=0.41.2
-uuid~=1.30
-PyYAML~=6.0.1
-requests~=2.31.0
-packaging~=24.0
-inflection~=0.5.1
-uritemplate~=4.1.1
-setuptools~=68.2.2
-stripe~=8.6.0
+stripe==8.6.0
+typing_extensions==4.10.0
+uritemplate==4.1.1
+urllib3==2.2.1
