--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-pip~=23.2.1
-wheel~=0.41.2
+psycopg2-binary==2.9.9
 pillow~=10.2.0
 redis~=5.0.3
-setuptools~=68.2.2
-packaging~=24.0
 Django~=5.0.2
 celery~=5.3.6
 python-dateutil~=2.9.0.post0
