--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,9 +12,8 @@ services:
 
   db:
     image: postgres:16.1-alpine
-    environment:
-      - POSTGRES_PASSWORD=mysecretpassword
-      - PGDATA=/ver/lib/postgresql/data/pgdata
+    env_file:
+      - .env
     volumes:
       - pg_data:/ver/lib/postgresql/data/pgdata
     ports:
@@ -27,6 +26,8 @@ services:
 
   app:
     build: .
+    env_file:
+      - .env
     tty: true
     command: python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:8000
     volumes:
@@ -39,6 +40,8 @@ services:
 
   celery:
     build: .
+    env_file:
+      - .env
     tty: true
     command: celery -A config worker -l INFO
     depends_on:
@@ -47,6 +50,8 @@ services:
 
   celery_beat:
     build: .
+    env_file:
+      - .env
     tty: true
     restart: always
     command: celery -A config beat -l INFO -S django
