--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,15 +12,19 @@ services:
 
   db:
     image: postgres:16.1-alpine
+    environment:
+      PG_DATA: /var/lib/postgresql/pgdata
+#      PGUSER: 'postgres1'
     env_file:
       - .env
     volumes:
-      - pg_data:/ver/lib/postgresql/data/pgdata
+      - pg_data:/var/lib/postgresql/pgdata
     ports:
-      - '5432:5432'
+      - '5433:5432'
+#    command: -p 5433
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready" ]
-      interval: 10s
+      interval: 5s
       timeout: 5s
       retries: 5
 
