fixed .env, .env.template, docker-compose

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,20 @@
 # DATABASE_AUTH
-DATABASE_NAME=''
-POSTGRES_USER=''
+POSTGRES_DATABASE_NAME=
+POSTGRES_USER=
 POSTGRES_PASSWORD=
-PGUSER=
+
+# CELERY
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
+
+# SMTP-server
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+
+# DATABASE_AUTH for settings
+DATABASE_NAME=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_HOST=
+
+SECRET_KEY=
