--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,17 +13,19 @@ services:
   db:
     image: postgres:16.1-alpine
     environment:
-      PG_DATA: /var/lib/postgresql/pgdata
-#      PGUSER: 'postgres1'
+      PG_DATA: /var/lib/postgresql/data
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DATABASE_NAME}
     env_file:
       - .env
     volumes:
-      - pg_data:/var/lib/postgresql/pgdata
+      - pg_data:/var/lib/postgresql/data
     ports:
       - '5433:5432'
 #    command: -p 5433
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready" ]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DATABASE_NAME}" ]
       interval: 5s
       timeout: 5s
       retries: 5
