--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,3 @@
-# DATABASE_AUTH
-POSTGRES_DATABASE_NAME=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-
 # CELERY
 CELERY_BROKER_URL=
 CELERY_RESULT_BACKEND=
@@ -18,3 +13,5 @@ DATABASE_PASSWORD=
 DATABASE_HOST=
 
 SECRET_KEY=
+
+STRIPE_API_KEY
