--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.11'
 
 services:
 
@@ -14,9 +14,9 @@ services:
     image: postgres:16.1-alpine
     environment:
       PG_DATA: /var/lib/postgresql/data
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_DB: ${POSTGRES_DATABASE_NAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_DB: ${DATABASE_NAME}
     env_file:
       - .env
     volumes:
@@ -25,7 +25,7 @@ services:
       - '5433:5432'
 #    command: -p 5433
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DATABASE_NAME}" ]
+      test: [ "CMD-SHELL", "pg_isready -U ${DATABASE_USER} -d ${DATABASE_NAME}" ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -35,7 +35,10 @@ services:
     env_file:
       - .env
     tty: true
-    command: python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:8000
+    command: >
+      sh -c "python3 manage.py migrate &&
+        python3 manage.py runserver 0.0.0.0:8000"
+
     volumes:
       - .:/code
     ports:
@@ -43,13 +46,15 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      redis:
+        condition: service_healthy
 
   celery:
     build: .
     env_file:
       - .env
     tty: true
-    command: celery -A config worker -l INFO
+    command: celery -A config worker -l INFO -S django
     depends_on:
       - redis
       - app
